<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.calpoly.react.CreateNewActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:text="@string/activity_name_prompt"
            android:paddingTop="10pt"
            android:textStyle="bold"
            android:layout_weight="0.03" />

        <EditText android:id="@+id/activity_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/inputColor"
            android:hint="@string/activity_text_prompt"
            android:layout_weight="0.19" />

        <TextView
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:text="@string/act_title_prompt"
            android:paddingTop="10pt"
            android:textStyle="bold"
            android:layout_weight="0.03"/>

        <EditText android:id="@+id/activity_descrip"
            android:layout_width="360dp"
            android:layout_height="80dp"
            android:inputType="text"
            android:maxLines="3"
            android:gravity="top"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:background="@color/inputColor"
            android:hint="@string/activity_descrip_prompt"
            android:layout_weight="0.17" />

        <Spinner
            android:id="@+id/category_spinner"
            android:dropDownVerticalOffset="25dp"
            android:layout_width="247dp"
            android:layout_marginTop="5dp"
            android:layout_height="40dp"></Spinner>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:text="@string/create_activity"
            android:onClick="addNewActivity"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="60dp"/>

        <TextView
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:paddingLeft="10dp"
            android:text="@string/category_prompt"
            android:paddingTop="10pt"
            android:textStyle="bold"
            android:layout_weight="0.03"/>

    </LinearLayout>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="Please provide name."
        android:visibility="invisible"
        android:textColor="@color/red"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp" />
</RelativeLayout>
